# oop-template

./: .clang-tidy  .env  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  ResourceManager.cpp  ResourceManager.hpp  env_fixes.h  icon.rc  launcher.bat  launcher.command  launcher.sh  main-client.cpp  main.cpp  tastatura.txt  valgrind-suppressions.supp
.github/: dependabot.yml  rebase-branches.json  renovate-ci.json  renovate-deps.json  renovate-os.json  renovate.json  renovate_ci.json
.github/actions/clang-tidy/: action.yml
.github/actions/configure-PostgreSQL/: action.yml
.github/actions/configure-cmake/: action.yml
.github/actions/cppcheck/: action.yml
.github/actions/create-release/: action.yml
.github/actions/create-release-common/: action.yml
.github/actions/install-linux-deps/: action.yml
.github/actions/install-packages/: action.yml
.github/actions/process-artifacts/: action.yml
.github/actions/runtime-checks/: action.yml
.github/config/: rebase-branches.json  renovate-ci.json  renovate-deps.json  renovate-os.json
.github/workflows/: clear-artifacts.yml  clear-cache.yml  cmake.yml  disable-dependabot.yml  rebase-branches.yml  renovate-ci.yml  renovate-deps.yml  renovate-os.yml  renovate_ci.yml
cmake/: CompilerFlags.cmake  CopyHelper.cmake  CustomStdlibAndSanitizers.cmake  Options.cmake
cmake/cpack/: AppImage.cmake  main.cmake
cmake/simsimd-patches/: CMakeLists.txt
database/: Database.cpp  Database.h
exemplu_test_oop/: BankAccount.cpp  BankAccount.h
ext/include/: httplib.h
ext/include/boost/: ut.hpp
ext/include/random/: random.hpp
ext/include/rlutil/: rlutil.h
ext/lib/: httplib.cc
include/: BankAccount.h  Example.h
scripts/: build_cppcheck.sh  cmake.sh  configure_postgres.sh  install-linux-deps.sh  install-sfml-deps.sh  install_cppcheck.sh  run_cppcheck.sh  run_llm.sh  run_sanitizers.sh  run_test.sh  run_valgrind.sh  valgrind-suppressions.supp
src/: CMakeLists.txt  Example.cpp  main.cpp
src/database/: Database.cpp
src/exemplu_test_oop/: BankAccount.cpp  BankAccount.h
tests/: CMakeLists.txt  README.md  README_Tests.md  exemplu_test_oop.cpp  exemplu_test_simplu.cpp  main.cpp  test2.cpp  test_oop.cpp  test_simplu.cpp
